--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Swift project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: Swift
+name: iOS Build
 
 on:
   push:
@@ -11,12 +11,31 @@ on:
 
 jobs:
   build:
-
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
+      # (Optional) Ensure the default Xcode on the macOS image is selected
+      - name: Select Xcode
+        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+
+      - name: Build iOS app
+        run: |
+          xcodebuild \
+            -project MacOSClone.xcodeproj \
+            -scheme MacOSClone \
+            -sdk iphoneos \
+            -configuration Release \
+            CODE_SIGNING_ALLOWED=NO \
+            build
+
+      - name: Run tests on iOS simulator
+        run: |
+          xcodebuild \
+            -project MacOSClone.xcodeproj \
+            -scheme MacOSClone \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15' \
+            test
