--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
-name: iOS Build
+name: iOS CI
 
 on:
   push:
@@ -10,33 +7,44 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: macos-latest
 
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
 
-      # (Optional) Ensure the default Xcode on the macOS image is selected
+      # Optionally pin Xcode version (you can tweak this if needed)
       - name: Select Xcode
-        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
-
-      - name: Build iOS app
         run: |
-          xcodebuild \
-            -project MacOSClone.xcodeproj \
-            -scheme MacOSClone \
-            -sdk iphoneos \
-            -configuration Release \
-            CODE_SIGNING_ALLOWED=NO \
-            IPHONEOS_DEPLOYMENT_TARGET=18.0 \
-            build
+          if [ -d "/Applications/Xcode_16.app" ]; then
+            sudo xcode-select -s /Applications/Xcode_16.app/Contents/Developer
+          else
+            sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+          fi
 
-      - name: Run tests on iOS simulator
+      - name: Build for iOS Simulator
         run: |
+          set -o pipefail
           xcodebuild \
             -project MacOSClone.xcodeproj \
             -scheme MacOSClone \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 15' \
+            -configuration Debug \
+            IPHONEOS_DEPLOYMENT_TARGET=17.0 \
+            CODE_SIGNING_ALLOWED=NO \
+            clean build
+
+      - name: Run tests on iOS Simulator
+        run: |
+          set -o pipefail
+          xcodebuild \
+            -project MacOSClone.xcodeproj \
+            -scheme MacOSClone \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15' \
+            -configuration Debug \
+            IPHONEOS_DEPLOYMENT_TARGET=17.0 \
+            CODE_SIGNING_ALLOWED=NO \
             test
